feat: get categories with companies