@@ -1,28 +1,35 @@
-package puc.appointify.gateway.mapper;
+package puc.appointify.gateway.mapper.impl;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
+import puc.appointify.domain.core.entity.Category;
 import puc.appointify.domain.core.entity.Company;
 import puc.appointify.domain.core.entity.valueobject.CompanyDetails;
 import puc.appointify.domain.core.entity.valueobject.Email;
 import puc.appointify.domain.core.entity.valueobject.Password;
 import puc.appointify.domain.core.entity.valueobject.Username;
+import puc.appointify.gateway.entity.CategoryEntity;
 import puc.appointify.gateway.entity.CompanyEntity;
+import puc.appointify.gateway.mapper.DataMapper;
 
+import java.util.ArrayList;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
-@RequiredArgsConstructor
-public class CompanyDataAccessMapper {
-    private final CategoryDataAccessMapper categoryDataAccessMapper;
+public class CompanyDataAccessMapper implements DataMapper<Company, CompanyEntity> {
 
     public CompanyEntity toEntity(Company company) {
         if (company == null) return null;
 
-        var categoriesEntities = company.getCategories()
-                .stream()
-                .map(categoryDataAccessMapper::toEntity)
-                .collect(Collectors.toList());
+        var companyCategories = company.getCategories();
+
+        List<CategoryEntity> categoriesEntities = new ArrayList<>();
+        if (companyCategories != null) {
+            categoriesEntities.addAll(companyCategories
+                    .stream()
+                    .map(this::toEntity)
+                    .toList());
+        }
 
         return CompanyEntity
                 .builder()
@@ -40,11 +47,6 @@ public class CompanyDataAccessMapper {
     public Company toDomain(CompanyEntity entity) {
         if (entity == null) return null;
 
-        var categories = entity.getCategories()
-                .stream()
-                .map(categoryDataAccessMapper::toDomain)
-                .collect(Collectors.toList());
-
         var domain = Company
                 .builder()
                 .email(new Email(entity.getEmail()))
@@ -56,8 +58,37 @@ public class CompanyDataAccessMapper {
                         entity.getCompanyGovernmentId()))
                 .build();
 
+        var entityCategories = entity.getCategories();
+        if (entityCategories != null) {
+            var categories = entityCategories
+                    .stream()
+                    .map(this::toDomain)
+                    .collect(Collectors.toList());
+            domain.loadCategories(categories);
+        }
+
         domain.setId(entity.getId());
-        domain.loadCategories(categories);
+
+        return domain;
+    }
+
+
+    public CategoryEntity toEntity(Category category) {
+        if (category == null) return null;
+        return CategoryEntity
+                .builder()
+                .id(category.getId())
+                .name(category.getName())
+                .build();
+    }
+
+    public Category toDomain(CategoryEntity entity) {
+        if (entity == null) return null;
+        var domain = Category
+                .builder()
+                .name(entity.getName())
+                .build();
+        domain.setId(entity.getId());
         return domain;
     }
 }
